--- a/login.html
+++ b/login.html
@@ -498,6 +498,31 @@
         }, 200);
       });
     });
+
+    // Generate a random session ID
+function generateSessionId(length = 16) {
+  const chars = 'ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789';
+  let sessionId = '';
+  for (let i = 0; i < length; i++) {
+    sessionId += chars.charAt(Math.floor(Math.random() * chars.length));
+  }
+  return sessionId;
+}
+
+// Create session object
+const loginData = {
+  username: username,
+  loginTime: new Date().toISOString(),
+  isAuthenticated: true,
+  sessionId: generateSessionId(24)  // <-- new session ID
+};
+
+// Store in localStorage to simulate a "real session"
+localStorage.setItem('session', JSON.stringify(loginData));
+
+// Also store in memory (your existing code)
+window.userSession = loginData;
+
   </script>
 </body>
 </html>
